syntax = "proto3";

package warehouse;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "../gen/proto/warehouse";

service WarehouseService {
  rpc Create(Warehouse) returns(WarehouseId);
  rpc GetById(WarehouseId) returns(Warehouse);
  rpc Update(Warehouse) returns(google.protobuf.Empty);
  rpc Delete(WarehouseId) returns(google.protobuf.Empty);
  rpc GetList(WarehouseCompanyId) returns(WarehouseList);
  rpc GetResponsibleUsers(WarehouseCompanyId) returns(UserList);
}

message Warehouse {
  int64 id = 1; // Уникальный идентификатор склада
  string name = 2; // Название склада
  string address = 3; // Адрес склада
  string responsible_person = 4; // Ответственное лицо за склад
  string phone = 5; // Контактный телефон склада
  string email = 6; // Электронная почта для связи
  int64 max_capacity = 7; // Максимальная вместимость склада
  int64 current_occupancy = 8; // Текущая заполняемость склада
  string other_fields = 9; // Дополнительные пользовательские поля
  string country = 10; // Страна склада
  int64 company_id = 11; // Идентификатор компании
}

message WarehouseId {
  int64 Id = 1;
}

message WarehouseList {
  repeated Warehouse warehouses = 1;
}

message WarehouseCompanyId {
  int64 Id = 1;
}

message User {
  int64 id = 1;                                                   // Уникальный идентификатор пользователя
  int64 company_id = 2;                                            // Уникальный идентификатор компании
  string username = 3;
  string name = 4;                                                // Имя пользователя, уникальное
  string email = 5;                                                // Электронная почта пользователя, уникальная
  string phone = 6;                                                // Телефон пользователя
  string password_hash = 7;                                        // Хеш пароля пользователя
  google.protobuf.Timestamp created_at = 8;                        // Дата и время создания учетной записи
  google.protobuf.Timestamp updated_at = 9;                        // Дата и время последнего обновления учетной записи
  google.protobuf.Timestamp last_login = 10;                        // Дата и время последнего входа (используем обертку для возможности null)
  bool is_active = 11;                                             // Статус активности учетной записи
  string role = 12;                                                // Роль пользователя (например, 'user', 'admin')
  string language = 13;                                            // Язык пользователя
  string country = 14;                                             // Страна пользователя
  bool is_approved = 15;                                           // Подтвержден ли пользователь
  bool is_send_system_notification = 16;                           // Отправлять ли пользователю уведомления
  repeated string sections = 17;                                   // Секции пользователя
  string position = 18;                                            // Должность пользователя
}

message UserList {
  repeated User users = 1;
}